[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "GreyElaina", email = "31543961+GreyElaina@users.noreply.github.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8,<4.0"
dependencies = [
    "graia-broadcast~=0.23.0",
    "croniter<2.0.0,>=1.0.0",
    "launart>=0.7.0",
    "creart~=0.3.0",
]
name = "graia-scheduler"
version = "0.3.0"
description = "a scheduler for graia framework"
readme = "README.md"
[project.optional-dependencies]
saya = ["graia-saya>=0.0.16,<0.1"]

[project.entry-points."creart.creators"]
scheduler = "graia.scheduler.creator:SchedulerCreator"
scheduler_behaviour = "graia.scheduler.creator:SchedulerBehaviourCreator"

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "graia-saya>=0.0.16",
]
docs = [
    "mkdocs-material>=8.2.0",
    "mkdocstrings[python]>=0.18.0",
    "mkdocs-literate-nav>=0.4.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-gen-files>=0.3.0",
]

[tool.pdm.build]
includes = ["src/graia"]

[tool.isort]
profile = "black"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
ignore = ["docs/gen_ref.py"]
